After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 550253 - Crash in nautilus_icon_canvas_item_get_image
Crash in nautilus_icon_canvas_item_get_image
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Views: Icon View
3.0.x
Other Linux
: Normal critical
: 3.0
Assigned To: Nautilus Maintainers
Nautilus Maintainers
: 571424 640515 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2008-09-01 16:53 UTC by Sebastien Bacher
Modified: 2011-04-07 20:34 UTC
See Also:
GNOME target: ---
GNOME version: 2.91/3.0



Description Sebastien Bacher 2008-09-01 16:53:32 UTC
the bug has been opened on https://bugs.launchpad.net/ubuntu/+source/nautilus/+bug/262536

"I was just browsing some folders in my home directory when it crashes. I'm getting this bug pretty often.

nautilus 1:2.23.90-0ubuntu1

  • #0 nautilus_icon_canvas_item_get_image
    at nautilus-icon-canvas-item.c line 496
  • #1 drag_begin_callback
    at nautilus-icon-dnd.c line 1454
  • #2 IA__g_closure_invoke
    at /build/buildd/glib2.0-2.17.7/gobject/gclosure.c line 767
  • #3 signal_emit_unlocked_R
    at /build/buildd/glib2.0-2.17.7/gobject/gsignal.c line 3244
  • #4 IA__g_signal_emit_valist
    at /build/buildd/glib2.0-2.17.7/gobject/gsignal.c line 2977
  • #5 IA__g_signal_emit_by_name
    at /build/buildd/glib2.0-2.17.7/gobject/gsignal.c line 3071
  • #6 gtk_drag_begin_internal
    at /build/buildd/gtk+2.0-2.13.7/gtk/gtkdnd.c line 2283
  • #7 motion_notify_event
    at nautilus-icon-container.c line 4276
  • #8 _gtk_marshal_BOOLEAN__BOXED
    at /build/buildd/gtk+2.0-2.13.7/gtk/gtkmarshalers.c line 84
  • #9 IA__g_closure_invoke
    at /build/buildd/glib2.0-2.17.7/gobject/gclosure.c line 767
  • #10 signal_emit_unlocked_R
    at /build/buildd/glib2.0-2.17.7/gobject/gsignal.c line 3282
  • #11 IA__g_signal_emit_valist
    at /build/buildd/glib2.0-2.17.7/gobject/gsignal.c line 2987
  • #12 IA__g_signal_emit
    at /build/buildd/glib2.0-2.17.7/gobject/gsignal.c line 3034
  • #13 gtk_widget_event_internal
    at /build/buildd/gtk+2.0-2.13.7/gtk/gtkwidget.c line 4745
  • #14 IA__gtk_propagate_event
    at /build/buildd/gtk+2.0-2.13.7/gtk/gtkmain.c line 2363
  • #15 IA__gtk_main_do_event
    at /build/buildd/gtk+2.0-2.13.7/gtk/gtkmain.c line 1568
  • #16 gdk_event_dispatch
    at /build/buildd/gtk+2.0-2.13.7/gdk/x11/gdkevents-x11.c line 2365
  • #17 IA__g_main_context_dispatch
    at /build/buildd/glib2.0-2.17.7/glib/gmain.c line 2073
  • #18 g_main_context_iterate
    at /build/buildd/glib2.0-2.17.7/glib/gmain.c line 2706
  • #19 IA__g_main_loop_run
    at /build/buildd/glib2.0-2.17.7/glib/gmain.c line 2929
  • #20 IA__gtk_main
    at /build/buildd/gtk+2.0-2.13.7/gtk/gtkmain.c line 1172
  • #21 main
    at nautilus-main.c line 581

Comment 1 Alejandro 2008-11-07 16:40:56 UTC
I got this once. I dragged a file (or folder?) with the mouse and when I was over "back" button it crashed iirc. Anything I can do in order to help?
Comment 2 Akhil Laddha 2011-01-25 11:55:28 UTC
*** Bug 640515 has been marked as a duplicate of this bug. ***
Comment 3 Akhil Laddha 2011-01-25 11:56:30 UTC
last dupe in 2.30.x
Comment 4 Cosimo Cecchi 2011-04-06 20:02:04 UTC
I can reproduce the crash with 3.0 following these instructions from the duplicate bug 640515.

1. left click on a folder
2. while holding the left button - right click and select open 
3. release buttons 
4. nautilus crash...
Comment 5 Cosimo Cecchi 2011-04-06 20:22:55 UTC
*** Bug 571424 has been marked as a duplicate of this bug. ***
Comment 6 Cosimo Cecchi 2011-04-07 20:34:44 UTC
It seems we were not properly clearing up the DnD state when the menu popped up.
I pushed a fix for this to git master, closing as FIXED.