icon-container: clear the drag state before popping up context menu

Otherwise, a fake drag state will leak into the next motion-notify event
when the menu has been dismissed, causing a segfault.

https://bugzilla.gnome.org/show_bug.cgi?id=550253